@@ -2,6 +2,11 @@ efi-reader (0.4) UNRELEASED; urgency=low
 
   * Use the new debconf_* macros
   * Move to new libdebian-installer API.
+  * Richard Hirst
+    - Make it compile with libdebian-installer4 and current
+      linux-kernel-headers.
+    - Change table.h generation to end with null string, not 0, to fix
+      compiler warnings.  Change code to match.
 
  -- Alastair McKinstry <mckinstry@debian.org>  Sat,  4 Oct 2003 10:42:15 +0100
 
